@@ -1,4 +1,5 @@
 0.4.0
+- aligns ApiAiSpecHelper with new spec helper interface from AssistantJS 0.4.0
 - add new ResponseHandler for compatibility with assistant-source 0.4.0
 - add interfaces for representing dialogflow api v2
 - annotate utterances with entities
